; ModuleID = '/home/carl/AnghaBench/linux/net/nfc/nci/extr_core.c_nci_data_timer.c'
source_filename = "/home/carl/AnghaBench/linux/net/nfc/nci/extr_core.c_nci_data_timer.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.nci_dev = type { i32, i32, i32 }
%struct.timer_list = type { i32 }

@data_timer = common dso_local global i32 0, align 4
@NCI_DATA_EXCHANGE_TO = common dso_local global i32 0, align 4
@ndev = common dso_local global %struct.nci_dev* null, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.timer_list*)* @nci_data_timer to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @nci_data_timer(%struct.timer_list* %0) #0 {
  %2 = alloca %struct.timer_list*, align 8
  %3 = alloca %struct.nci_dev*, align 8
  store %struct.timer_list* %0, %struct.timer_list** %2, align 8
  %4 = load %struct.nci_dev*, %struct.nci_dev** %3, align 8
  %5 = ptrtoint %struct.nci_dev* %4 to i32
  %6 = load %struct.timer_list*, %struct.timer_list** %2, align 8
  %7 = load i32, i32* @data_timer, align 4
  %8 = call %struct.nci_dev* @from_timer(i32 %5, %struct.timer_list* %6, i32 %7)
  store %struct.nci_dev* %8, %struct.nci_dev** %3, align 8
  %9 = load i32, i32* @NCI_DATA_EXCHANGE_TO, align 4
  %10 = load %struct.nci_dev*, %struct.nci_dev** %3, align 8
  %11 = getelementptr inbounds %struct.nci_dev, %struct.nci_dev* %10, i32 0, i32 2
  %12 = call i32 @set_bit(i32 %9, i32* %11)
  %13 = load %struct.nci_dev*, %struct.nci_dev** %3, align 8
  %14 = getelementptr inbounds %struct.nci_dev, %struct.nci_dev* %13, i32 0, i32 1
  %15 = load i32, i32* %14, align 4
  %16 = load %struct.nci_dev*, %struct.nci_dev** %3, align 8
  %17 = getelementptr inbounds %struct.nci_dev, %struct.nci_dev* %16, i32 0, i32 0
  %18 = call i32 @queue_work(i32 %15, i32* %17)
  ret void
}

declare dso_local %struct.nci_dev* @from_timer(i32, %struct.timer_list*, i32) #1

declare dso_local i32 @set_bit(i32, i32*) #1

declare dso_local i32 @queue_work(i32, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
